<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <PreferenceCategory app:title="@string/main_settings_title">-->

<!--        <ListPreference-->
<!--            app:defaultValue="tempC"-->
<!--            app:entries="@array/reply_entries_temp"-->
<!--            app:entryValues="@array/reply_values_temp"-->
<!--            app:key="temp_value"-->
<!--            app:title="@string/settings_temp_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/notification_settings">

        <SwitchPreferenceCompat
            app:key="notification_key"
            app:title="@string/notification_settings_title" />

        <ListPreference
            app:dependency="notification_key"
            app:defaultValue="1"
            app:entries="@array/reply_entries_period"
            app:entryValues="@array/reply_values_period"
            app:key="notification_period_key"
            app:title="@string/notification_period"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>